--- a/BigBrain/Node.js/Holobot/package.json
+++ b/BigBrain/Node.js/Holobot/package.json
@@ -11,10 +11,13 @@
     "email": ""
   },
   "dependencies": {
-    "cylon": "^1.2.0",
-    "cylon-firmata": "^0.23.0",
-    "cylon-gpio": "^0.27.0",
-    "cylon-i2c": "^0.23.0",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "request": "2.65.0",
+    "cylon": "~1.1.0",
+    "cylon-firmata": "~0.22.0",
+    "cylon-gpio": "~0.26.0",
+    "cylon-i2c": "~0.22.0",
     "cylon-stepper": "0.0.1",
     "debug": "^2.0.0",
     "expres": "0.0.5",
