--- a/BigBrain/Node.js/Holobot/package.json
+++ b/BigBrain/Node.js/Holobot/package.json
@@ -11,9 +11,8 @@
     "email": ""
   },
   "dependencies": {
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "request": "2.65.0",
+    "body-parser": "*",
+    "cookie-parser": "*",
     "cylon": "~1.1.0",
     "cylon-firmata": "~0.22.0",
     "cylon-gpio": "~0.26.0",
@@ -23,7 +22,9 @@
     "expres": "0.0.5",
     "express": "^4.9.8",
     "jade": "^1.6.0",
+    "johnny-five": "^0.9.17",
     "morgan": "^1.3.2",
+    "request": "*",
     "serve-favicon": "^2.3.0",
     "stylus": "^0.42.3"
   }
